# qxnzy-microcourse-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-04f50669242fb4c41c7119d58d77db76193634d65ccf6762d1b0114256ad5945.json  query-0d6c0a01f12ade67f2c19edcaf98cb459bbedceee87959770afd16b8db1647d6.json  query-21c00607a17198ffcb6273dc2097e87f366f28d2eae6a055c2551f1b8a5c8659.json  query-28d7ff130509c243b1891288dfb939939b71556dbc4770be973d5b7faae3cf22.json  query-2fd1fc33c3182649d9ae826d66f239de8038c7c3dfab83dbb45bfff054e8d376.json  query-30e736f6464962ea9f2345068a63fb2fdcd3c7fb85f881b11bd8dabf437fabc8.json  query-38de8451a600294f893d7f331f1cf84577ceb553b2621d6ae3933c1832d17eb9.json  query-3d0c9d4a5624cfea92adefbdfb141066a6c77e3b46b486a5df194784b2a06ffb.json  query-406be3707291ad27d6d26630cfdb0db824643e659184247cdac4cc8363f6a4b5.json  query-429f5464406ab210a469aa24f5282c727916b70d6bc5f8ac1b412fe634f0368f.json  query-43d738725498e42e308fdbd1057233b4b93aaab393a0d5f2ca5f4bc470a8970d.json  query-45f0e89aa27568c1154ee6d225070875e887b740b34232a412610561a5c902df.json  query-4a0a0195f2b7da66b3775d06d85ad345b1a14a8c28de115796cf7c69d7075b31.json  query-4cbc1c377af617929d414e3bfc0634f8b486a875456648e9cccf118533e97cb5.json  query-4e2b1c3d250ffabf7911962eb5394bbe13fd18084a3d109cccd3dd289310bc23.json  query-5250bddd38de5b58c2f4cf9c65cf16e91c12c7f80a3202fd57fce8757cd002fb.json  query-5380ca0b88717c6eeefbffdf5fb75928446493220f8ee0296f0b1b2e584ff9fc.json  query-55da128256db0d9b37499e55fa3466571f5c3a9c9e07d26eeb92a3a86a5a3767.json  (+26 more)
src/: main.rs  (+1 more)
(+57 files in other folders)
